se crea la lista que va a obtener los tipos de cambio y el componente para cambiar dinero

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "money-exchange-web"
+  "defaultProject": "money-exchange-web",
+  "cli": {
+    "analytics": false
+  }
 }
